Fix table of contents dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,20 +109,20 @@ header p {
 /* Ajustement pour le mode sombre */
 body.dark-mode #table-of-contents {
     background-color: #2a2a2a;
-    border-color: #e3e0e0;
+    border-color: #444;
 }
 
 body.dark-mode #table-of-contents h2 {
-    color: #fff;
+    color: #e0e0e0;
     border-bottom-color: #444;
 }
 
 body.dark.mode #table-of-contents a {
-    color: #9cf;
+    color: #6ab0de;
 }
 
 body.dark.mode #table-of-contents a:hover {
-    color: #bdf;
+    color: #8bc4ea;
 }
 
 /* Ajustement du style global pour le mode sombre */
@@ -185,12 +185,25 @@ figcaption {
 
 .image-container {
     display: flex;
+    justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 1em;
+    gap: 20px;
 }
 
 .image-container img {
     flex: 1 1 auto;
     max-width: calc(50% - 0.5em);  /* Adjust if you want more or fewer images per row */
+}
+
+.responsive-image {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+@media (min-width: 768px) {
+    .responsive-image {
+        max-width: 45%;
+    }
 }
